# stan-monorepo

./: .clang-format  .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md  conanfile.py  conanfile.txt
src/stan/algorithms/: CMakeLists.txt
src/stan/cmdstan/: CMakeLists.txt  command.hpp  diagnose.cpp  main.cpp  print.cpp  stanc.cpp  stanc_helper.hpp  stansummary.cpp  stansummary_helper.hpp  write_model.hpp  write_stan.hpp
src/stan/language/: CMakeLists.txt  ast.hpp  ast_def.cpp  compile_functions.hpp  compiler.hpp  function_signatures.h  generator.hpp  parser.hpp  rethrow_located.hpp
src/stan/math/: .clang-format  CMakeLists.txt  version.hpp.in
src/stan/services/: CMakeLists.txt
src/stan/util/: CMakeLists.txt
tests/: CMakeLists.txt
tests/algorithms_unit/: CMakeLists.txt  base_adapter_test.cpp  chains_test.cpp  covar_adaptation_test.cpp  instrumented_callbacks.hpp  sample_test.cpp  stepsize_adaptation_test.cpp  util.cpp  util.hpp  var_adaptation_test.cpp  windowed_adaptation_test.cpp
tests/algorithms_unit/hmc/: CMakeLists.txt  base_hmc_test.cpp  mock_hmc.hpp
tests/algorithms_unit/optimization/: CMakeLists.txt  bfgs_exponential_boundary_test.cpp  bfgs_linesearch_test.cpp  bfgs_minimizer_test.cpp  bfgs_test.cpp  bfgs_update_test.cpp  lbfgs_update_test.cpp
tests/algorithms_unit/variational/: CMakeLists.txt  advi_messages_test.cpp  advi_multivar_no_constraint_test.cpp  advi_multivar_with_constraint_test.cpp  advi_univar_no_constraint_test.cpp  advi_univar_with_constraint_test.cpp  eta_adapt_big_test.cpp  eta_adapt_fail_test.cpp  eta_adapt_mock_models_test.cpp  eta_adapt_small_test.cpp  gradient_warn_test.cpp  hier_logistic_cp_test.cpp  hier_logistic_test.cpp  print_progress_test.cpp  stochastic_gradient_ascent_test.cpp
tests/cmdstan/: CMakeLists.txt  command_test.cpp  csv_header_consistency_test.cpp  diagnose_test.cpp  elapsed_time_test.cpp  fixed_param_sampler_test.cpp  generated_quantities_test.cpp  metric_test.cpp  model_output_test.cpp  mpi_test.cpp  opencl_test.cpp  optimization_output_test.cpp  print_test.cpp  print_uninitialized_test.cpp  stanc_helper_test.cpp  stansummary_test.cpp  util.cpp  util.hpp  utility.hpp  variational_output_test.cpp
tests/cmdstan/arguments/: arg_optimize_algo_test.cpp  argument_configuration_test.cpp  argument_parser_test.cpp  argument_test.cpp  categorical_argument_test.cpp  singleton_argument_test.cpp  unvalued_argument_test.cpp  valued_argument_test.cpp
tests/language_unit/: CMakeLists.txt  compiler_test.cpp  parser_generator_test.cpp  rethrow_located_test.cpp  stanc_helper_test.cpp  util.hpp.in  utility.cpp  utility.hpp
tests/language_unit/ast/: CMakeLists.txt  scope_test.cpp  variable_map_test.cpp
tests/language_unit/generator/: CMakeLists.txt  ast_nodes_test.cpp  cholesky_factor_cov_var_test.cpp  deep_copy_test.cpp  function_var_test.cpp  generate_array_builder_adds_test.cpp  generate_cpp_test.cpp  generate_expression_test.cpp  generate_idxs_test.cpp  generate_model_typedef_test.cpp  generate_quoted_test.cpp  generate_var_type_test.cpp  local_var_test.cpp  log_prob_test.cpp  multi_dim_var_data_test.cpp  multi_dim_var_test.cpp  prim_var_test.cpp
tests/language_unit/model/: CMakeLists.txt  finite_diff_grad_test.cpp  grad_hess_log_prob_test.cpp  grad_tr_mat_times_hessian_test.cpp  gradient_dot_vector_test.cpp  gradient_test.cpp  hessian_test.cpp  hessian_times_vector_test.cpp  log_prob_grad_test.cpp  log_prob_propto_test.cpp  model_base_crtp_test.cpp  model_base_test.cpp  model_functional_test.cpp  test_gradients_test.cpp  test_model.hpp
tests/language_unit/parser/: CMakeLists.txt  algebra_solver_test.cpp  assignment_statement_test.cpp  assignment_test.cpp  break_continue_test.cpp  distribution_functions_test.cpp  duplicate_warnings_test.cpp  error_messages_test.cpp  expression_grammar_test.cpp  for_statements_test.cpp  function_sig_errors_test.cpp  functions_on_lhs_test.cpp  functions_standalone_instantiate_test.cpp  functions_standalone_test.cpp  get_lp_test.cpp  if_else_deprecation_test.cpp  indexing_test.cpp  integrate_1d_test.cpp  integrate_ode_deprecation_test.cpp  lkj_cov_deprecation_test.cpp  lower_trunc_adjust_test.cpp  map_rect_test.cpp  math_functions_test.cpp  matrix_functions_test.cpp  ode_test.cpp  other_functions_test.cpp  other_test.cpp  pound_comment_deprecated_test.cpp  print_function_test.cpp  redefine_prob_functions_test.cpp  replace_log_funs_test.cpp  reserved_words_test.cpp  rng_location_test.cpp  statement_grammar_test.cpp  term_grammar_test.cpp  test_bare_type_grammar.hpp  test_bare_type_grammar_def.hpp  test_bare_type_grammar_inst.cpp  test_block_var_decls_grammar.hpp  test_block_var_decls_grammar_def.hpp  (+16 more)
tests/language_unit/reject/: CMakeLists.txt  print_reject_function_gq_test.cpp  print_reject_function_model_test.cpp  print_reject_function_tdata_test.cpp  print_reject_function_tparams_test.cpp  print_reject_gq_test.cpp  print_reject_model_test.cpp  print_reject_tdata_test.cpp  print_reject_tparams_test.cpp  reject_func_call_generated_quantities_test.cpp  reject_func_call_model_test.cpp  reject_func_call_transformed_data_test.cpp  reject_func_call_transformed_parameters_test.cpp  reject_generated_quantities_test.cpp  reject_helper.hpp  reject_model_test.cpp  reject_mult_args_test.cpp  reject_transformed_data_test.cpp  reject_transformed_parameters_test.cpp
tests/math_prob/: CMakeLists.txt  generate_tests.cpp  test_fixture_ccdf_log.hpp  test_fixture_cdf.hpp  test_fixture_cdf_log.hpp  test_fixture_distr.hpp  utility.hpp
tests/math_prob/bernoulli/: CMakeLists.txt  bernoulli_ccdf_log_test.hpp  bernoulli_cdf_log_test.hpp  bernoulli_cdf_test.hpp  bernoulli_logit_test.hpp  bernoulli_test.hpp  srcs_rvec.txt
tests/math_prob/beta/: CMakeLists.txt  beta_ccdf_log_test.hpp  beta_cdf_log_test.hpp  beta_cdf_test.hpp  beta_test.hpp  srcs_rvec.txt
tests/math_unit/: CMakeLists.txt  math_include_test.cpp  rename_tests.py  util.cpp  util.hpp
tests/services_unit/: CMakeLists.txt  check_adaptation.cpp  check_adaptation.hpp  instrumented_callbacks.hpp
tests/util_unit/: CMakeLists.txt  util.hpp
(+5851 files in other folders)
